updates to workflow

--- a/workflows/nextflow.config
+++ b/workflows/nextflow.config
@@ -1,3 +1,39 @@
 env{
 	PATH="$PATH:$HOME/bbmap:$HOME/metapigs/megahit"
 }
+
+process {
+    
+    cpus = 4
+    //memory = 16.GB
+
+    withLabel: big_mem {
+        cpus = 8
+        //memory = 64.GB
+    }
+
+}
+
+/*
+executor {
+
+    $pbs {
+        queueSize = 25
+    }
+    
+    $local {
+        queueSize = 1
+    }
+}
+
+profiles {
+
+    standard {
+        process.executor = 'local'
+    }
+    
+    cluster {
+        process.executor = 'pbspro'
+    }
+} 
+*/
