removed accidental update

--- a/workflows/nextflow.config
+++ b/workflows/nextflow.config
@@ -5,16 +5,15 @@ env{
 process {
     
     cpus = 4
-    //memory = 16.GB
+    memory = 16.GB
 
     withLabel: big_mem {
         cpus = 8
-        //memory = 64.GB
+        memory = 64.GB
     }
 
 }
 
-/*
 executor {
 
     $pbs {
@@ -36,4 +35,4 @@ profiles {
         process.executor = 'pbspro'
     }
 } 
-*/
+
