--- a/workflows/nextflow.config
+++ b/workflows/nextflow.config
@@ -1,16 +1,17 @@
-env{
-	PATH="$PATH:$HOME/bbmap:$HOME/metapigs/megahit"
+env {
+    METAPIGS_TMP = '/scratch/work'
+}
+
+conda {
+    cacheDir = 'metapigs/workflows/conda'
 }
 
 process {
-    
-    cpus = 4
-    memory = 16.GB
 
-    withLabel: big_mem {
-        cpus = 8
-        memory = 64.GB
-    }
+    conda = 'metapigs/workflows/conda-tools.yaml'
+
+    cpus = 4
+    memory = 8.GB
 
 }
 
@@ -21,7 +22,7 @@ executor {
     }
     
     $local {
-        queueSize = 1
+        queueSize = 4
     }
 }
 
@@ -32,7 +33,6 @@ profiles {
     }
     
     cluster {
-        process.executor = 'pbspro'
+        process.executor = 'pbs'
     }
 } 
-
