--- a/workflows/conda-tools.yaml
+++ b/workflows/conda-tools.yaml
@@ -4,8 +4,8 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - 'bbmap=38.22'
-  - 'bwa=0.7.17'
-  - 'samtools=1.9'
-  - 'megahit=1.1.3'
-  - 'metabat2=2.12.1'
+  - 'bbmap'
+  - 'bwa'
+  - 'samtools'
+  - 'megahit'
+  - 'metabat2'
