preparation for initial run

--- a/workflows/initial.config
+++ b/workflows/initial.config
@@ -3,12 +3,12 @@ env {
 }
 
 conda {
-    cacheDir = 'metapigs/workflows/conda'
+    cacheDir = "${METAPIGS_REPO}/workflows/conda"
 }
 
 process {
 
-    conda = 'metapigs/workflows/conda-tools.yaml'
+    conda = "${METAPIGS_REPO}/workflows/conda-tools.yaml"
 
     cpus = 4
     memory = 8.GB
