before full run

--- a/workflows/initial.config
+++ b/workflows/initial.config
@@ -1,5 +1,7 @@
 env {
-    METAPIGS_TMP = '/scratch/work'
+    METAPIGS_TMP = "/scratch/work"
+    TMPDIR = "/scratch/work"
+    TMP = "/scratch/work"
 }
 
 conda {
@@ -18,6 +20,7 @@ executor {
 
     $pbs {
         queueSize = 25
+	pollInterval = '3sec'
     }
     
     $local {
