updates to initial and mmeseqs workflows

--- a/workflows/mmseqs.config
+++ b/workflows/mmseqs.config
@@ -5,9 +5,7 @@ conda {
 process {
 
     conda = "${METAPIGS_REPO}/workflows/mmseqs-tools.yaml"
-
-    cpus = 4
-    memory = 30.GB
+    clusterOptions = " -l select=1:intel_node=yes:ncpus=8:mem=100g -l walltime=72:00:00"
 }
 
 executor {
